--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "jade": ">= 0.0.1",
     "request": ">= 2.9.0",
     "memory-cache": ">= 0.0.2"
+  },
+  "engines" : {
+    "node": "0.6.x"
   }
 }
