--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "express": "2.5.10",
     "jade": ">= 0.0.1",
     "request": ">= 2.9.0",
-    "memory-cache": ">= 0.0.2",
-    "coffee-script": ">= 1.3.0"
+    "memory-cache": ">= 0.0.2"
   },
   "engines" : {
     "node": "0.6.x"
