--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "2.5.10",
     "jade": ">= 0.0.1",
     "request": ">= 2.9.0",
-    "memory-cache": ">= 0.0.2"
+    "memory-cache": ">= 0.0.2",
+    "underscore": ">= 1.3.3"
   },
   "engines" : {
     "node": "0.6.x"
